# robo-sim

./: CMakeLists.txt  README.md
include/: common.h  renderer.h  robot.h  world.h
src/: main.cpp  renderer.cpp  robot.cpp  world.cpp
